--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: smartpark
-description: A new Flutter project.
+name: smart_parking_final
+description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -28,25 +28,24 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  profile: ^0.0.1
-  image_picker: ^1.0.4
-  table_calendar: ^3.0.9
-  syncfusion_flutter_sliders: ^23.2.7
-  timer_count_down: ^2.2.0
-
-  flutter_datetime_picker_plus: ^2.1.0
-  google_fonts: ^6.1.0
-  time: "^2.1.3"
-
-
   flutter:
     sdk: flutter
-
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  profile: ^0.0.1
+  image_picker: ^1.0.4
+  table_calendar: ^3.0.9
+  syncfusion_flutter_sliders: ^23.2.7
+  timer_count_down: ^2.2.0
+  flutter_datetime_picker_plus: ^2.1.0
+  google_fonts: ^6.1.0
+  time: ^2.1.3
+  smooth_page_indicator: ^1.1.0
+  google_sign_in: ^5.2.1
+  sign_in_with_apple: ^5.0.0
 
 dev_dependencies:
   flutter_test:
@@ -71,9 +70,11 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-      - assets/images/
+  # assets:
+  #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
