--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "smartpark" "\0"
+            VALUE "FileDescription", "smart_parking_final" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "smartpark" "\0"
+            VALUE "InternalName", "smart_parking_final" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2023 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "smartpark.exe" "\0"
-            VALUE "ProductName", "smartpark" "\0"
+            VALUE "OriginalFilename", "smart_parking_final.exe" "\0"
+            VALUE "ProductName", "smart_parking_final" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
